# openstack-codegenerator

./: .gitignore  .pre-commit-config.yaml  .stestr.conf  AUTHORS  ChangeLog  Issues.md  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: docs.yml
codegenerator/: Issues.md  ansible.py  base.py  cli.py  jsonschema.py  metadata.py  model.py  openapi_spec.py  osc.py  rust_cli.py  rust_sdk.py  types.py
codegenerator/common/: __init__.py  rust.py  schema.py
codegenerator/generator/: ansible.py  base.py  jsonschema.py  metadata.py  openapi_spec.py  osc.py  rust_cli.py  rust_sdk.py  types.py
codegenerator/generator/common/: __init__.py  schema.py
codegenerator/generator/openapi/: base.py  cinder.py  glance.py  keystone.py  neutron.py  nova.py  nova_schemas.py  octavia.py  utils.py
codegenerator/generator/templates/: rust_macros.j2
codegenerator/generator/templates/ansible/: impl_mod_info.py.j2  test_playbook.yaml.j2
codegenerator/openapi/: base.py  cinder.py  cinder_schemas.py  glance.py  keystone.py  keystone_schemas.py  neutron.py  neutron_schemas.py  nova.py  nova_schemas.py  octavia.py  placement.py  utils.py
codegenerator/openapi/keystone_schemas/: __init__.py  application_credential.py  auth.py  common.py  domain.py  endpoint.py  federation.py  group.py  project.py  region.py  role.py  service.py  user.py
codegenerator/templates/: rust_macros.j2
codegenerator/templates/ansible/: impl_mod.py.j2
codegenerator/templates/osc/: test_unit_delete.py.j2  test_unit_list.py.j2  test_unit_unset.py.j2
codegenerator/templates/rust_cli/: functional_test_impl.rs.j2  impl.rs.j2  impl_image_download.j2  invoke_create.j2  invoke_download.j2  invoke_list.j2  invoke_list_from_struct.j2  invoke_patch.j2  invoke_upload.j2  parameters.j2  path_parameters.j2  query_parameters.j2  response_struct.j2  set_body_parameters.j2  set_path_parameters.j2  set_query_parameters.j2
codegenerator/templates/rust_sdk/: find.rs.j2  impl.rs.j2  mod.rs.j2  request_struct.j2  root_struct.j2  subtypes.j2
codegenerator/templates/sdk/: impl_schema.py.j2
codegenerator/tests/functional/: test_openapi_cinder.py  test_openapi_glance.py  test_openapi_keystone.py  test_openapi_neutron.py  test_openapi_nova.py  test_openapi_octavia.py
codegenerator/tests/unit/: test_common.py  test_model.py  test_model_object.py  test_rust_cli.py  test_rust_sdk.py
doc/: requirements.txt
doc/source/: ansible.rst  conf.py  index.rst  metadata.rst  openapi.rst  osc.rst  rust_cli.rst  rust_sdk.rst
metadata/: block-storage_metadata.yaml  compute_metadata.yaml  identity_metadata.yaml  image_metadata.yaml  network_metadata.yaml  object-store_metadata.yaml
tools/: generate_openapi_specs.sh  generate_rust.sh  generate_rust_block_storage.sh  generate_rust_compute.sh  generate_rust_identity.sh  generate_rust_image.sh  generate_rust_network.sh  generate_rust_swift.sh  generate_schemas.sh
wrk/openapi_specs/block-storage/: v3.yaml
wrk/openapi_specs/compute/: v2.yaml
wrk/openapi_specs/identity/: v3.yaml
wrk/openapi_specs/image/: v2.yaml
wrk/openapi_specs/network/: v2.yaml
(+13 files in other folders)
