[metadata]
name = openstack-codegenerator
summary = Generator for OpenStack stuff
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/openstacksdk/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
python_requires = >=3.6

[files]
packages =
    codegenerator

[mypy]
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
# follow_imports = normal
follow_imports = skip
incremental = true
check_untyped_defs = true
warn_unused_ignores = true
# keep this in-sync with 'mypy.exclude' in '.pre-commit-config.yaml'
# TODO(stephenfin) Eventually we should remove everything here except the
# unit tests module
exclude = (?x)(
    openstack/tests/ansible
    | openstack/tests/functional
    | openstack/tests/unit
    | openstack/tests/fixtures.py
    | openstack/accelerator
    | openstack/baremetal
    | openstack/baremetal_introspection
    | openstack/block_storage
    | openstack/cloud
    | openstack/clustering
    | openstack/compute
    | openstack/container_infrastructure_management
    | openstack/database
    | openstack/dns
    | openstack/fixture
    | openstack/identity
    | openstack/image
    | openstack/instance_ha
    | openstack/key_manager
    | openstack/load_balancer
    | openstack/message
    | openstack/network
    | openstack/object_store
    | openstack/orchestration
    | openstack/placement
    | openstack/shared_file_system
    | openstack/workflow
    | doc
    | examples
    | releasenotes
  )
